PR/47884: Brad Harder: Avoid variable stack allocation, use malloc for SSP.